--- a/css/style.css
+++ b/css/style.css
@@ -314,24 +314,59 @@ p.sub-title-section {
     margin-bottom: 50px;
   }
 }
-#section-news #container-section-news #item-section-news-left #btn-join-reader {
-  display: block;
-  font-size: 20px;
-  margin: 0 auto;
-  width: 350px;
-  padding: 15px 20px;
-  background-color: #0868ae;
-  color: #fff;
-  border: 2px solid #fff;
-  border-radius: 8px;
-  text-align: center;
-  transition: background-color 0.3s ease;
-  margin-bottom: 50px;
+#section-news #container-section-news #item-section-news-left .wrapper {
+  position: fixed;
+  top: 90%;
+  left: 10%;
+  transform: translate(-50%, -50%);
 }
-#section-news #container-section-news #item-section-news-left #btn-join-reader:hover {
-  transform: scale(1.01);
-  color: #f9b017;
-  border: 2px solid #f9b017;
+#section-news #container-section-news #item-section-news-left .wrapper .link_wrapper {
+  position: relative;
+}
+#section-news #container-section-news #item-section-news-left .wrapper .link_wrapper a#btn-join-reader {
+  display: block;
+  width: 250px;
+  height: 50px;
+  line-height: 50px;
+  font-weight: bold;
+  text-decoration: none;
+  background: #ff5e38;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 8px;
+  transition: all 0.35s;
+}
+#section-news #container-section-news #item-section-news-left .wrapper .link_wrapper a#btn-join-reader:hover {
+  width: 200px;
+  border: 3px solid #ff5e38;
+  background: transparent;
+  color: #fff;
+}
+#section-news #container-section-news #item-section-news-left .wrapper .link_wrapper a#btn-join-reader:hover + .icon {
+  border: 3px solid #ff5e38;
+  right: -25%;
+}
+#section-news #container-section-news #item-section-news-left .wrapper .link_wrapper div.icon {
+  width: 50px;
+  height: 50px;
+  border: 3px solid transparent;
+  position: absolute;
+  transform: rotate(45deg);
+  right: 0;
+  top: 0;
+  z-index: -1;
+  transition: all 0.35s;
+}
+#section-news #container-section-news #item-section-news-left .wrapper .link_wrapper div.icon svg {
+  width: 30px;
+  position: absolute;
+  top: calc(50% - 15px);
+  left: calc(50% - 15px);
+  transform: rotate(-45deg);
+  fill: #fff;
+  transition: all 0.35s;
 }
 @media screen and (min-width: 950px) {
   #section-news #container-section-news #item-section-news-left {
