--- a/css/style.scss
+++ b/css/style.scss
@@ -347,26 +347,87 @@ p.sub-title-section {
         }
       }
 
-      #btn-join-reader {
-        display: block;
-        font-size: 20px;
-        margin: 0 auto;
-        width: 350px;
-        padding: 15px 20px;
-        background-color: $main-blue;
-        color: $white;
-        border: 2px solid $white;
-        border-radius: 8px;
-        text-align: center;
-        transition: background-color 0.3s ease;
-        margin-bottom: 50px;
+      .wrapper {
+        position: fixed;
+        top: 90%;
+        left: 10%;
+        transform: translate(-50%, -50%);
 
-        &:hover {
-          transform: scale(1.01);
-          color: #f9b017;
-          border: 2px solid #f9b017;
+        .link_wrapper {
+          position: relative;
+
+          a#btn-join-reader {
+            display: block;
+            width: 250px;
+            height: 50px;
+            line-height: 50px;
+            font-weight: bold;
+            text-decoration: none;
+            background: $btn-red;
+            text-align: center;
+            color: $white;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            border-radius: 8px;
+            transition: all 0.35s;
+
+            &:hover {
+              width: 200px;
+              border: 3px solid $btn-red;
+              background: transparent;
+              color: $white;
+            }
+
+            &:hover + .icon {
+              border: 3px solid $btn-red;
+              right: -25%;
+            }
+          }
+
+          div.icon {
+            width: 50px;
+            height: 50px;
+            border: 3px solid transparent;
+            position: absolute;
+            transform: rotate(45deg);
+            right: 0;
+            top: 0;
+            z-index: -1;
+            transition: all 0.35s;
+
+            svg {
+              width: 30px;
+              position: absolute;
+              top: calc(50% - 15px);
+              left: calc(50% - 15px);
+              transform: rotate(-45deg);
+              fill: $white;
+              transition: all 0.35s;
+            }
+          }
         }
       }
+
+      // #btn-join-reader {
+      //   display: block;
+      //   font-size: 20px;
+      //   margin: 0 auto;
+      //   width: 350px;
+      //   padding: 15px 20px;
+      //   background-color: $main-blue;
+      //   color: $white;
+      //   border: 2px solid $white;
+      //   border-radius: 8px;
+      //   text-align: center;
+      //   transition: background-color 0.3s ease;
+      //   margin-bottom: 50px;
+
+      //   &:hover {
+      //     transform: scale(1.01);
+      //     color: #f9b017;
+      //     border: 2px solid #f9b017;
+      //   }
+      // }
 
       @media screen and (min-width: 950px) {
         width: 50%;
@@ -554,7 +615,7 @@ p.sub-title-section {
 
     li {
       margin-bottom: 60px;
-    
+
       @media screen and (min-width: 950px) {
         width: 33%;
         margin-right: -100px;
@@ -562,19 +623,18 @@ p.sub-title-section {
         padding: 0;
         transition: all 0.5s ease;
       }
-    
+
       &:hover {
         @media screen and (min-width: 950px) {
           transform: translateY(-50px);
         }
       }
     }
-    
+
     .animated-card {
       position: relative;
       opacity: 0;
     }
-    
 
     a {
       font-weight: bolder;
