--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -158,6 +158,13 @@ main #section-catalog #container-catalog #container-cards .card {
   padding: 15px 5px 15px 200px;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #fafafb;
+}
+main #section-catalog #container-catalog #container-cards .card:hover img {
+  transform: translateY(-15px);
+}
+main #section-catalog #container-catalog #container-cards .card:hover {
+  background-color: #fff;
 }
 main #section-catalog #container-catalog #container-cards .card img {
   position: absolute;
@@ -170,24 +177,25 @@ main #section-catalog #container-catalog #container-cards .card img {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: transform 0.5s ease;
 }
-main #section-catalog #container-catalog #container-cards .card img:hover {
-  transform: translateY(-15px);
-}
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card h4 {
+  font-size: 16px;
   margin: 15px 0;
   text-transform: capitalize;
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card h3.title-book-catalog {
+  font-family: "Nova Slim", sans-serif;
+  font-style: normal;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 18px;
   line-height: normal;
   letter-spacing: 0.04em;
   color: #0868ae;
   text-overflow: ellipsis;
-  font-family: "Nova Slim", cursive, sans-serif;
+  margin-bottom: 12px;
 }
-main #section-catalog #container-catalog #container-cards .card .bottom-item-card .title-card {
-  font-size: 10px;
+main #section-catalog #container-catalog #container-cards .card .bottom-item-card h5 {
+  font-size: 14px;
+  text-transform: capitalize;
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card .description-card {
   min-height: 60px;
@@ -203,8 +211,13 @@ main #section-catalog #container-catalog #container-cards .card .bottom-item-car
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card a.link-page {
   position: absolute;
-  bottom: 10px;
   right: 10px;
-  font-size: 14px;
+  bottom: 15px;
+  font-size: 16px;
   color: #0868ae;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+main #section-catalog #container-catalog #container-cards .card .bottom-item-card a.link-page:hover {
+  color: #043a61;
 }/*# sourceMappingURL=style-catalogue.css.map */
