petite maj connect

--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -53,6 +53,7 @@ main {
         top: 80px;
         bottom: 80px;
         width: 100%;
+        padding: 20px 0;
         height: fit-content;
         background-color: $white;
         border-radius: 20px;
