--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -42,6 +42,7 @@ main #section-catalog #container-catalog #container-filter {
   top: 80px;
   bottom: 80px;
   width: 100%;
+  padding: 20px 0;
   height: -moz-fit-content;
   height: fit-content;
   background-color: #fff;
