--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 $btn-red: #ff5e38;
 $btn-red-hover: #b53928;
 $main-blue: #0868ae;
+$main-blue-hover:#05497b;
 $white: #fff;
 $black: #070606;
 $footer: #043a61;
@@ -92,6 +93,31 @@ p.sub-title-section {
 #font-logo {
   font-family: "Risque", cursive, sans-serif;
   letter-spacing: 2px;
+}
+
+// BTN - BACK TO TOP
+
+#back-to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+  border: none;
+  outline: none;
+  background-color: $main-blue;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 8px;
+  font-size: 18px;
+
+  &:hover {
+    background-color: $main-blue-hover;
+  }
+
+  &::after {
+    content: url(../img/picto/arrow-narrow-up.svg);
+  }
 }
 
 // ----- KEYFRAME -----
@@ -296,17 +322,7 @@ p.sub-title-section {
 #section-news {
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-
   background: #0868ae;
-  background: -moz-linear-gradient(top, #0868ae 0%, #043a61 100%);
-  background: -webkit-linear-gradient(top, #0868ae 0%, #0868ae 100%);
-  background: linear-gradient(to bottom, #0868ae 0%, #0868ae 100%);
-
-  canvas {
-    z-index: -1;
-    height: 100%;
-    width: 100%;
-  }
 
   #container-section-news {
     position: absolute;
@@ -783,6 +799,17 @@ p.sub-title-section {
       &.show-card-row3 {
         animation: slide-up 0.5s ease forwards;
         animation-delay: calc(0.3s * (var(--card-index) - 1));
+      }
+
+      &::before {
+        position: absolute;
+        content: url(../img/picto/heart-rounded.svg);
+        top: 10px;
+        right: 10px;
+      }
+
+      &:hover::before {
+        cursor: pointer;
       }
     }
 
