--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@ $white: #fff;
 $black: #070606;
 $footer: #043a61;
 $background: #fafafb;
+$bgModal : rgba(6,13,30,.7);
 
 *,
 ::after,
@@ -30,6 +31,16 @@ $background: #fafafb;
 body {
   font-family: "Hind Madurai", sans-serif;
   background-color: #fafafb;
+
+  div.bloc-modale {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: $bgModal;
+    z-index: 99;
+  }
 }
 
 ul {
@@ -107,7 +118,7 @@ p.sub-title-section {
   outline: none;
   background-color: $main-blue;
   cursor: pointer;
-  padding: 5px;
+  padding: 12px;
   border-radius: 8px;
   font-size: 18px;
 
@@ -314,40 +325,57 @@ p.sub-title-section {
         }
 
         div#container-box-index-logout {
-          position: absolute;
-          top: 42px;
-          right: 50px;
-          width: 200px;
-          height: fit-content;
-          background-color: $white;
-          border-radius: 8px;
-          padding: 20px;
+
           a#btn-index-session {
             img {
               position: absolute;
-              top: -65px;
-              left: 170px;
+              top: -24px;
+              left: -80px;
             }
           }
 
-          ul {
-            li {
-              padding: 5px;
-              a {
+          div#box-index-logout {
+            position: absolute;
+            top: 42px;
+            right: 50px;
+            width: 180px;
+            height: 150px;
+            background-color: $white;
+            border-radius: 8px;
+            padding: 10px 20px;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
-                &:first-of-type{
-                  text-decoration: none;
+            ul {
+              li {
+                &:first-of-type {
+                  font-size: 18px;
                   color: $main-blue;
-                  font-size: 20px;
+                  margin-bottom: 3px;
                 }
-
-                &:hover {
-                  text-decoration: underline;
+  
+                &:last-of-type {
+                  position: absolute;
+                  bottom: -2px;
+                  left: 0;
+                  width: 180px;
+                  background-color: $footer;
+                  padding: 6px;
+                  border-radius: 0 0 8px 8px;
                 }
-
+  
+                &:last-of-type a {
+                  font-size: 14px;
+                  color: $white;
+                  float: right;
+                }
+  
+                a {
+                  font-size: 14px;
+                  &:hover {
+                    text-decoration: underline;
+                  }
+                }
               }
-
-
             }
           }
         }
